# insurance-cv

./: LICENSE  README.md  pyproject.toml
examples/: motor_walkforward.py
src/insurance_cv/: __init__.py  diagnostics.py  splits.py
tests/: test_splits.py
